--- a/index.qmd
+++ b/index.qmd
@@ -70,7 +70,7 @@ The version control system we’ll be diving into is Git, the most widely used m
 >
 > If Git is not installed, you'll need to download and install it. You can download Git from [git-scm.com](https://git-scm.com). During the installation process, there is an option to add Git to your PATH. Make sure this option is selected.
 >
-> Are you getting any errors? [Setting the Path to Git Manually](https://rvanwyck.github.io/240410_bb/240410_brown_bag.html)
+> Are you getting any errors? [Setting the Path to Git Manually](240410_brown_bag.html)
 
 ### **What *exactly* are Git and GitHub?**
 
